fixing links for categories

--- a/src/main/frontend/src/app/components/category/category.pug
+++ b/src/main/frontend/src/app/components/category/category.pug
@@ -1,1 +1,1 @@
-post-list([title]="category.name", [searchOptions]="searchOptions")
+post-list([title]="category.name", [searchOptions]="searchOptions", [hasReadMore]=true)
