--- a/src/main/frontend/src/app/components/post/search.pug
+++ b/src/main/frontend/src/app/components/post/search.pug
@@ -1,1 +1,1 @@
-post-list([title]="title", [searchOptions]="searchOptions")
+post-list([title]="title", [searchOptions]="searchOptions", [hasReadMore]=true)
